Fix responsive layout and links' width Now "Announcements" and "Trending" blocks are not far apart on smaller screens. Links on the sidebar no longer take up all the sidebar's width (this prevents hover styles from activating when hovering only near them).

--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@ h1 {
 }
 
 .nav-link {
+    width: max-content;
     color: var(--main-text);
     text-decoration: none;
 }
@@ -204,6 +205,7 @@ input[type="search"]:hover {
 
     display: grid;
     grid-template-columns: 3fr minmax(300px, 1fr);
+    grid-template-rows: 1fr;
 }
 
 .projects {
